# ai-powered-facultative-decision-support-system

./: .gitignore  AI-Powered_Facultative_Reinsurance_Decision_Support_System.ipynb  README.md  email_data_FAC. Offer - GLACIER REFRIGERATION SERVICES CORPORATION &_OR GLACIER MEGAFRIDGE (FIRE FACULTATIVE OF.json  email_data_Fac Support - Patel Engineering Teesta Project V- Package 6 - CAR.json  email_data_Facultative Agriculture Risk Placement – Cairo 3A (Egypt) – Request for Line Support.json
Backend/: INSTALLATION_GUIDE.md  README.md  SETUP.md  celery_app.py  env.example  main_celery.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_simple.py  start_dev.py  test_celery.py
Backend/models/: __init__.py  reinsurance_models.py
Backend/scripts/: start_services.bat  start_services.sh
Backend/services/: __init__.py  ai_analysis_service.py  cloudinary_service.py  document_processing_service.py  msg_reader_service.py
Backend/tasks/: analysis_tasks.py  analysis_tasks_sync.py
Backend/utils/: json_serializer.py  redis_checker.py
Frontend/: BACKEND_CONNECTION_FIX.md  COMPLETE_INTEGRATION_SUMMARY.md  ENHANCED_INTEGRATION_GUIDE.md  HEADER_FIX_SUMMARY.md  INTEGRATION_GUIDE.md  MSG_UPLOAD_TROUBLESHOOTING.md  README.md  UPLOAD_ENHANCEMENT_SUMMARY.md  UPLOAD_MODAL_INTEGRATION_SUMMARY.md
Frontend/app/: layout.tsx  page.tsx
Frontend/contexts/: AuthContext.tsx  DocumentContext.tsx  SubmissionContext.tsx
Frontend/lib/: analysis-history-types.ts  api.ts  constants.ts
Frontend/prisma/: schema.prisma
Frontend/providers/: submission-provider.tsx
(+43 files in other folders)
