[tool.poetry]
name = "ai-powered-facultative-reinsurance-backend"
version = "1.0.0"
description = "AI-Powered Facultative Reinsurance Decision Support System Backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "Backend", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^24.1.0"
celery = {extras = ["redis"], version = "^5.5.3"}
cloudinary = "^1.44.1"
extract-msg = "^0.55.0"
fastapi = "^0.117.1"
langchain = "^0.3.27"
langchain-openai = "^0.3.33"
llama-parse = "^0.6.69"
openai = "^1.109.1"
pydantic = "^2.11.9"
python-magic = "^0.4.27"
python-multipart = "^0.0.20"
redis = "^5.2.1"
requests = "^2.32.5"
uvicorn = {extras = ["standard"], version = "^0.37.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-server = "main_celery:start_server"
start-worker = "main_celery:start_worker"
start-redis = "main_celery:start_redis"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
